--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -35,7 +35,7 @@
     {%- unless post.pinned -%}
     <div class="post-teaser">
         {%- if post.image > "" -%}
-        {%- assign image_url = image -%}
+        {%- assign image_url = post.image -%}
         <div class="post-img">
             <a aria-label="{{ post.title }}" href="{{ post.url | relative_url }}">
               {%- if post.caption -%}
